fixed archive confs layout w/ overflow

--- a/public/style.css
+++ b/public/style.css
@@ -545,4 +545,6 @@ footer > a {
 .container {
   margin-top: auto;
   margin-bottom: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
